<resources>
    <string name="app_name">MyStory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_status">Login status</string>
    <string name="terms_login">I accept terms and conditions</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="desc1">I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution
        I learnt in Kotlin bootcamp how to solve problems and search for the solution</string>
    <string name="new_title">Enter title here..</string>
    <string name="new_subtitle">Enter subtitle here..</string>
    <string name="new_desc">Enter description here..</string>
    <string name="add_story">Add Story</string>
</resources>